멀티 모듈 구성 및 모듈간 의존성 제약  - blog-search-api  - blog-search-consumer  - blog-search-domain  - blog-search-infra

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,6 @@
 rootProject.name = 'blog-search'
+include 'blog-search-api'
+include 'blog-search-domain'
+include 'blog-search-consumer'
+include 'blog-search-infra'
+
