--- a/blog-search-api/build.gradle
+++ b/blog-search-api/build.gradle
@@ -1,6 +1,7 @@
 dependencies {
     implementation project(':blog-search-domain')
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.1.0'
 }
 
 tasks.named('bootJar') {
