--- a/blog-search-domain/build.gradle
+++ b/blog-search-domain/build.gradle
@@ -1,6 +1,7 @@
 dependencies {
     implementation project(':blog-search-infra')
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
     runtimeOnly 'com.h2database:h2'
 }
 
