build.gradle 수정  - spring-boot-dependencies version 필요  - snakeyaml 사용 필요 ( application.yml )

--- a/build.gradle
+++ b/build.gradle
@@ -25,14 +25,10 @@ subprojects {
 
 
     dependencies {
-        implementation platform('org.springframework.boot:spring-boot-dependencies')
+        implementation platform('org.springframework.boot:spring-boot-dependencies:3.0.6')
         compileOnly 'org.projectlombok:lombok'
         annotationProcessor 'org.projectlombok:lombok'
         testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    }
-
-    configurations {
-        implementation.exclude group: 'org.yaml', module: 'snakeyaml'
     }
 
     tasks.named('bootJar') {
